[package]
name = "git_extra"
version = "1.1.1"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "An extra useful set of Git related commands."
repository = "https://github.com/jlyonsmith/git_extra_rs"
keywords = ["git", "command-line", "development", "browse"]
categories = ["command-line-utilities", "development-tools"]
license = "Unlicense"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
duct = "0.13.6"
lazy_static = "1.4.0"
opener = "0.5.0"
regex = "1.6.0"
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.9"

[[bin]]
name = "git-extra"
path = "src/bin/git_extra.rs"
