[package]
name = "git_extra"
version = "3.1.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "An extra useful set of Git related commands."
repository = "https://github.com/jlyonsmith/git_extra_rs"
keywords = ["git", "command-line", "development", "browse"]
categories = ["command-line-utilities", "development-tools"]
license = "Unlicense"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
duct = "0.13"
easy-error = "1.0"
lazy_static = "1.4"
opener = "0.7"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
substring = "1.4"
toml = "0.8"

[[bin]]
name = "git-extra"
path = "src/bin/git_extra.rs"
